# main

NMP/conf/: php-fpm.conf.sh
dns/: update
dsn/: dsn.pl
env/: .screenrc
kindle/: make-kindle-pdf.sh
magento_nginx/: default  example.com  nginx.conf
magento_nginx/common/: noadmin
magento_nginx/listen/: default
magento_nginx/sites-enabled/: example.com
magenv/: build
magenv/conf/: mysql.conf.sh  php-fpm.conf.sh
mysql_backup/: mysql_backup
nginx_magento/: nginx.conf
nginx_magento/conf_new/: nginx.conf
nginx_magento/sites/: default
nginx_magento/sites-enabled/: default
ngx_http_magaz_module/src/: ngx_http_magaz_module.c
nmp/: build
service/: ajax.php  convert_for_import.php  download_stop.php  import_relations.php  index.php  json.js  menu.php  prov_prods.php  provider.php  providers.php  web_update.php
service/config/: conf.php
service/lib/: Converter.php  DB.php  Product.php
simple-server/: Makefile  Makefile.am  main.c  main.h
simple-server/etc/: Makefile.am  clear  configure.ac
simple-server/src/: main.c  main.h
tennis/: main.c  tennis.c
trunk/NMP/: build
trunk/dns/: update
trunk/dsn/: dsn.pl  gmail  old_unused_dsn.sh
trunk/env/: .bashrc  .vimrc
trunk/kindle/: make-kindle-pdf.sh
trunk/magento_nginx/: nginx.conf
trunk/magenv/: build  config
trunk/mysql_backup/: mysql_backup
trunk/ngx_http_magaz_module/: config
trunk/nmp/: build
trunk/service/: api_update.php  convert.php  grid-object.js  import.php  list_products.php  scroll_grid.css
trunk/simple-server/etc/: Makefile.am  configure.ac  reconf
(+118 files in other folders)
